# chronon

./: #afp_notes#  .#afp_notes  .bazeliskrc  .bazelrc  .bazelversion  .circleci.bazelrc  .coverage  .env  .gitignore  .jvmopts  .scalafmt.conf  AUTHORS  BUILD.bazel  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  LocalDockerfile  PROJECT_MANAGEMENT_COMMITTEE  PR_DESCRIPTION.md  README.md  WORKSPACE  artifactory_credentials.properties  build.mill  build.sbt  build.sh  devnotes.md  docker-compose.yml  gcloud_release.sh  init.sh  jenkins-build-py.sh  jenkins-build-sbt.sh  jenkins-build.sh  log.py  maven_upload.sh  maven_upload_all.sh  out  pom.xml.tpl  publish-package.sh  (+14 more)
aggregator/: BUILD.bazel  package.mill
ai/chronon/: BUILD.bazel  __init__.py  external_api.py  group_by.py  join.py  logger.py
ai/chronon/aggregator/: BUILD.bazel
ai/chronon/aggregator/base/: SimpleAggregators.scala  TimedAggregators.scala
ai/chronon/aggregator/row/: BucketedColumnAggregator.scala  ColumnAggregator.scala  DirectColumnAggregator.scala  MapColumnAggregator.scala  MapColumnAggregatorBase.scala  RowAggregator.scala  StatsGenerator.scala
ai/chronon/aggregator/test/: ApproxDistinctTest.scala  ApproxHistogramTest.scala  ApproxPercentilesTest.scala  BUILD.bazel  DataGen.scala  FrequentItemsTest.scala  MinHeapTest.scala  MomentTest.scala  NaiveAggregator.scala  RowAggregatorTest.scala  SawtoothAggregatorTest.scala  SawtoothOnlineAggregatorTest.scala  TwoStackLiteAggregatorTest.scala  VarianceTest.scala
ai/chronon/aggregator/windowing/: HopsAggregator.scala  SawtoothAggregator.scala  SawtoothMutationAggregator.scala  TsUtils.scala  TwoStackLiteAggregationBuffer.scala  TwoStackLiteAggregator.scala
ai/chronon/airflow/: constants.py  decorators.py  group_by_dag_constructor.py  helpers.py  readme.md
ai/chronon/api/: BUILD.bazel  DataModel.scala  DataType.scala  Exceptions.scala  HashUtils.scala  QueryUtils.scala
ai/chronon/api/test/: BUILD.bazel
ai/chronon/flink/: BUILD.bazel  FlinkJob.scala  SparkExpressionEvalFn.scala
ai/chronon/flink/test/: BUILD.bazel
ai/chronon/flink/window/: FlinkRowAggregators.scala
ai/chronon/online/: AvroConversions$.java  AvroConversions.scala  BUILD.bazel  CompatParColls$.java  Extensions$.java  Fetcher.scala  FetcherBase.scala  FetcherCache.scala  FlexibleExecutionContext$.java  GroupByServingInfoParsed.scala  JavaExternalSourceHandler.java  JavaResponse.java  JavaSeriesStatsResponse.java  JavaStatsRequest.java  JavaStatsResponse.java  JoinCodec.scala  LRUCache$.java  LRUCache.scala  MetadataEndPoint.scala  MetadataStore.scala  Metrics$.java  Metrics.scala  OnlineDerivationUtil$.java  SparkConversions.scala  SparkInternalRowConversions$.java  SparkInternalRowConversions.scala  TTLCache.scala  TileCodec.scala
ai/chronon/online/resources/: log4j.properties
ai/chronon/online/scala2.11/: BUILD.bazel  FutureConverters.scala  ScalaVersionSpecificCatalystHelper.scala
ai/chronon/online/scala2.12/: FutureConverters.scala  ScalaVersionSpecificCatalystHelper.scala
ai/chronon/online/scala2.13/: FutureConverters.scala  ScalaVersionSpecificCatalystHelper.scala
ai/chronon/quickstart/: .env.spark  requirements.txt
ai/chronon/quickstart/online/: BUILD.bazel  ChrononMongoOnlineImpl.scala  Constants.scala  MongoKvStore.scala  MongoLoggingDumper.scala  QuickstartMutationDecoder.scala  Spark2MongoLoader.scala
ai/chronon/repo/: compile.py  dependency_tracker.py  extract_objects.py  serializer.py
ai/chronon/scheduler/interfaces/: orchestrator.py
ai/chronon/service/: ApiProvider.java  BUILD.bazel  ConfigStore.java  README.md  WebServiceVerticle.java
ai/chronon/service/handlers/: FeaturesHandlerJsonSerDeTest.java
ai/chronon/spark/: Analyzer.scala  Args.scala  BUILD.bazel  BootstrapInfo.scala  ChrononKryoRegistrator.scala  Comparison$.java  Comparison.scala  DataRange.scala  Extensions$.java  FastHashing.scala  GroupBy.scala  GroupByUpload.scala  Join.scala  JoinUtils$.java  LocalDataLoader$.java  LocalDataLoader.scala  LogUtils$.java  LogUtils.scala  MetadataExporter$.java  SparkConstants$.java  SparkConstants.scala  SparkSessionBuilder$.java  StagingQuery.scala  TableUtils.scala
ai/chronon/spark/spark-default/: BUILD  EncoderUtil.scala
ai/chronon/spark/spark3.5plus/: EncoderUtil.scala
ai/chronon/spark/stats/: CompareMetrics.scala  StatsCompute.scala  SummaryJob.scala
ai/chronon/spark/streaming/: JoinSourceRunner.scala  TopicChecker.scala
ai/chronon/spark/test/: AnalyzerTest.scala  AvroTest.scala  BUILD.bazel  ChainingFetcherTest.scala  CompareTest.scala  DataFrameGen.scala  DataRangeTest.scala  EditDistanceTest.scala  ExtensionsTest.scala  ExternalSourcesTest.scala  FeatureWithLabelJoinTest.scala  FetchStatsTest.scala  FetcherTest.scala  GroupByTest.scala  GroupByUploadTest.scala  InMemoryKvStore.scala  InMemoryStream.scala  (+25 more)
ai/chronon/test/: BUILD.bazel  test_compile.py  test_decorator.py  test_dependency_tracker.py  test_group_by.py  test_join.py  test_utils.py  test_validator.py
api/: BUILD.bazel  package.mill
api/.bsp/: sbt.json
api/py/: .coveragerc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MANIFEST.in  README.md  RELEASE.md  api.thrift  build-python.sh  python-api-build.sh  release.sh  setup.py  tox.ini
api/py/ai/: __init__.py
api/py/quickstart/: README.md  teams.json
api/py/requirements/: base.in  base.txt  dev.in  dev.txt
api/py/test/: BUILD.bazel  Dockerfile  conftest.py  consistency_metrics.json  test2.py  test_compile.py  test_decorator.py  test_dependency_tracker.py  test_explore.py  test_group_by.py  test_join.py  test_join_backfill.py  test_lineage_parser.py  test_local_platform.py  test_pyspark.py  test_run.py  test_sample.py  test_serializer.py  test_source.py  test_staging_query.py  test_teams.py  test_testing.py  test_thrift.py  test_utils.py  test_validator.py
api/thrift/: BUILD.bazel  api.thrift
api/thrift/models/: BUILD.bazel
flink/: BUILD.bazel  package.mill
online/: BUILD.bazel  package.mill
quickstart/mongo-online-impl/: BUILD.bazel  build.sbt
spark/: BUILD.bazel  package.mill
(+1194 files in other folders)
