load("@io_bazel_rules_scala//scala:scala_cross_version_select.bzl", "select_for_scala_version")
load("@rules_jvm_external//:defs.bzl", "java_export")

scala_library(
    name = "aggregator",
    srcs = glob(["src/main/scala/ai/chronon/aggregator/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "//api:api-lib",
        "//api:api-models",
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("com.yahoo.datasketches:sketches-core"),
        maven_artifact("com.yahoo.datasketches:memory"),
        maven_artifact("org.apache.commons:commons-lang3"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
    ] + select_for_scala_version(
        before_2_13 = [
            scala_artifact("org.scala-lang.modules:scala-collection-compat"),
            scala_artifact("com.fasterxml.jackson.module:jackson-module-scala"),
        ],
        since_2_13 = [
            scala_artifact("org.scala-lang.modules:scala-parallel-collections"),
        ],
    ),
)

scala_library(
    name = "test-lib",
    srcs = glob(["src/test/scala/ai/chronon/aggregator/test/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
               ":aggregator",
               "//api:api-lib",
               "//api:api-models",
               maven_artifact("junit:junit"),
               maven_artifact("com.novocode:junit-interface"),
               maven_artifact("org.slf4j:slf4j-api"),
               maven_artifact("org.slf4j:slf4j-log4j12"),
               maven_artifact("com.google.code.gson:gson"),
               maven_artifact("org.apache.thrift:libthrift"),
               maven_artifact("org.apache.commons:commons-lang3"),
               maven_artifact("org.apache.commons:commons-math3"),
               maven_artifact("com.yahoo.datasketches:sketches-core"),
               maven_artifact("com.yahoo.datasketches:memory"),
           ] + select_for_scala_version(
               before_2_12 = [],
           ) + select_for_scala_version(before_2_13 = [
               maven_artifact("org.scala-lang.modules:scala-collection-compat_2.12"),
               maven_artifact("com.fasterxml.jackson.module:jackson-module-scala_2.12"),
           ]) +
           select_for_scala_version(after_2_12 = [
               maven_artifact("org.scala-lang.modules:scala-parallel-collections_2.13"),
           ]),
)

scala_test_suite(
    name = "test",
    srcs = glob(["src/test/scala/ai/chronon/aggregator/test/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
               ":aggregator",
               ":test-lib",
               "//api:api-lib",
               "//api:api-models",
               maven_artifact("junit:junit"),
               maven_artifact("com.novocode:junit-interface"),
               maven_artifact("org.slf4j:slf4j-api"),
               maven_artifact("org.slf4j:slf4j-log4j12"),
               maven_artifact("org.apache.thrift:libthrift"),
               maven_artifact("com.yahoo.datasketches:sketches-core"),
               maven_artifact("com.google.code.gson:gson"),
               maven_artifact("com.yahoo.datasketches:memory"),
               maven_artifact("org.apache.commons:commons-lang3"),
               maven_artifact("org.apache.commons:commons-math3"),
           ] + select_for_scala_version(
               before_2_12 = [],
           ) + select_for_scala_version(before_2_13 = [
               maven_artifact("org.scala-lang.modules:scala-collection-compat_2.12"),
               maven_artifact("com.fasterxml.jackson.module:jackson-module-scala_2.12"),
           ]) +
           select_for_scala_version(after_2_12 = [
               maven_artifact("org.scala-lang.modules:scala-parallel-collections_2.13"),
           ]),
)

genrule(
    name = "generate_pom",
    srcs = ["//:pom.xml.tpl"],
    outs = ["export-pom.tpl"],
    cmd = """
    cat $(location //:pom.xml.tpl) \\
        | sed 's/{name}/aggregator/g' \\
        > $@
    """,
)

java_export(
    name = "aggregator-export",
    maven_coordinates = "ai.chronon:aggregator_(scala_version):$(version)",
    pom_template = ":generate_pom",
    runtime_deps = [
        ":aggregator",
    ],
)
