scala_library(
    name = "flink",
    srcs = glob(["src/main/scala/ai/chronon/flink/**/*.scala"]),
    deps = [
        "//aggregator",
        "//api:api-lib",
        "//api:api-models",
        "//online",
        "//third_party/java/spark:spark-exec",
        maven_artifact("org.apache.flink:flink-core"),
        maven_artifact("org.apache.flink:flink-metrics-core"),
        maven_artifact("org.apache.flink:flink-streaming-java"),
        scala_artifact("org.apache.flink:flink-scala"),
        scala_artifact("org.apache.flink:flink-streaming-scala"),
        maven_artifact("org.apache.flink:flink-metrics-dropwizard"),
        maven_artifact("io.dropwizard.metrics:metrics-core"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)

scala_library(
    name = "test-lib",
    srcs = glob(["src/test/scala/ai/chronon/flink/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        ":flink",
        "//aggregator",
        "//api:api-lib",
        "//api:api-models",
        "//online",
        "//third_party/java/spark:spark-exec",
        maven_artifact("org.apache.flink:flink-core"),
        maven_artifact("org.apache.flink:flink-core-tests"),
        maven_artifact("org.apache.flink:flink-runtime-tests"),
        maven_artifact("org.apache.flink:flink-test-utils"),
        maven_artifact("org.apache.flink:flink-metrics-core"),
        maven_artifact("org.apache.flink:flink-streaming-java"),
        scala_artifact("org.apache.flink:flink-scala"),
        scala_artifact("org.apache.flink:flink-streaming-scala"),
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("org.apache.flink:flink-metrics-dropwizard"),
        maven_artifact("io.dropwizard.metrics:metrics-core"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("junit:junit"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        maven_artifact("org.mockito:mockito-core"),
        scala_artifact("org.scalatest:scalatest-matchers-core"),
        scala_artifact("org.scalatest:scalatest-core"),
        maven_artifact("org.scalatest:scalatest-compatible"),
        scala_artifact("org.scalatest:scalatest-shouldmatchers"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)

scala_test_suite(
    name = "test",
    srcs = glob(["src/test/scala/ai/chronon/flink/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        ":flink",
        ":test-lib",
        "//aggregator",
        "//api:api-lib",
        "//api:api-models",
        "//online",
        "//third_party/java/spark:spark-exec",
        maven_artifact("org.apache.flink:flink-core"),
        maven_artifact("org.apache.flink:flink-core-tests"),
        maven_artifact("org.apache.flink:flink-test-utils"),
        maven_artifact("org.apache.flink:flink-runtime-tests"),
        maven_artifact("org.apache.flink:flink-metrics-core"),
        maven_artifact("org.apache.flink:flink-streaming-java"),
        scala_artifact("org.apache.flink:flink-scala"),
        scala_artifact("org.apache.flink:flink-streaming-scala"),
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("org.apache.flink:flink-metrics-dropwizard"),
        maven_artifact("io.dropwizard.metrics:metrics-core"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("junit:junit"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        maven_artifact("org.mockito:mockito-core"),
        scala_artifact("org.scalatest:scalatest-matchers-core"),
        scala_artifact("org.scalatest:scalatest-core"),
        maven_artifact("org.scalatest:scalatest-compatible"),
        scala_artifact("org.scalatest:scalatest-shouldmatchers"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)
