load("@rules_jvm_external//:defs.bzl", "java_export")

scala_library(
    name = "flink",
    srcs = glob(["src/main/scala/ai/chronon/flink/**/*.scala"]),
    deps = [
        "//aggregator",
        "//api:api-lib",
        "//api:api-models",
        "//online",
        "//third_party/java/flink:flink-libs",
        "//third_party/java/spark:spark-libs",
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)

scala_library(
    name = "test-lib",
    srcs = glob(["src/test/scala/ai/chronon/flink/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        ":flink",
        "//aggregator",
        "//api:api-lib",
        "//api:api-models",
        "//online",
        "//third_party/java/flink:flink-libs",
        "//third_party/java/spark:spark-libs",
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("junit:junit"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        maven_artifact("org.mockito:mockito-core"),
        scala_artifact("org.scalatest:scalatest-matchers-core"),
        scala_artifact("org.scalatest:scalatest-core"),
        maven_artifact("org.scalatest:scalatest-compatible"),
        scala_artifact("org.scalatest:scalatest-shouldmatchers"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)

scala_test_suite(
    name = "test",
    srcs = glob(["src/test/scala/ai/chronon/flink/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        ":flink",
        ":test-lib",
        "//aggregator",
        "//api:api-lib",
        "//api:api-models",
        "//online",
        "//third_party/java/flink:flink-libs",
        "//third_party/java/spark:spark-libs",
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("junit:junit"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        maven_artifact("org.mockito:mockito-core"),
        scala_artifact("org.scalatest:scalatest-matchers-core"),
        scala_artifact("org.scalatest:scalatest-core"),
        maven_artifact("org.scalatest:scalatest-compatible"),
        scala_artifact("org.scalatest:scalatest-shouldmatchers"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)

genrule(
    name = "generate_pom",
    srcs = ["//:pom.xml.tpl"],
    outs = ["spark-export-pom.tpl"],
    cmd = """
    cat $(location //:pom.xml.tpl) \\
        | sed 's/{name}/flink/g' \\
        > $@
    """,
)

jvm_binary(
    name = "flink-assembly",
    deploy_env = ["//third_party/java/flink:flink-provided-env"],
    main_class = "ai.chronon.flink.FlinkJob",
    runtime_deps = [":flink"],
)

java_export(
    name = "flink-export",
    maven_coordinates = "ai.chronon:flink_$(flink_version)_$(scala_version):$(version)",
    pom_template = ":generate_pom",
    runtime_deps = [
        ":flink",
    ],
)
