load("@rules_python//python:py_test.bzl", "py_test")
load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:packaging.bzl", "py_wheel")

py_library(
    name = "api_py",
    srcs = glob(["**/*.py"]),  # All Python files in your_module
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//ai/chronon/api:api-models-py",
        requirement("thrift"),
    ],
)

## Create a Python wheel from your package
py_wheel(
    name = "chronon_ai",
    distribution = "chronon_ai",
    version = "0.0.1",
    visibility = ["//visibility:public"],
    deps = [
        ":api_py",
    ],
)
