load("@pypi//:requirements.bzl", "requirement")
load("//tools/build_rules/python:pytest_suite.bzl", "pytest_suite")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("//tools/build_rules/python:twine_upload.bzl", "twine_upload")

py_library(
    name = "api_py",
    srcs = glob(["ai/chronon/**/*.py"]),  # All Python files in your_module
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//api/thrift:api-models-py",
        requirement("thrift"),
    ],
)

## Create a Python wheel from your package
py_wheel(
    name = "chronon_ai",
    distribution = "chronon_ai",
    version = "$(version)",
    visibility = ["//visibility:public"],
    deps = [
        ":api_py",
    ],
)

## Publish the pip package
twine_upload(
    name = "upload_chronon_ai",
    version = "$(version)",
    visibility = ["//visibility:public"],
    wheel = ":chronon_ai",
)

# PySpark tests require the Chronon Spark uber JAR
_PYSPARK_TEST_FILES = [
    "test/test_pyspark.py",
    "test/test_local_platform.py",
]

pytest_suite(
    name = "api_test",
    srcs = glob(
        ["test/**/*.py"],
        exclude = ["test/sample/**/*"] + _PYSPARK_TEST_FILES,
    ),
    data = glob(["test/sample/**/*",
                 "test/lineage/**/*.sql"]),
    env = {
        "CHRONON_ROOT": "api/py/",
    },
    imports = [
        ".",
        "test/sample",
        "chronon/api/thrift",
    ],
    deps = [
        "//api/py:api_py",
        "//api/thrift:api-models-py",
        requirement("thrift"),
        requirement("click"),
        requirement("sqlglot"),
    ],
)

pytest_suite(
    name = "pyspark_test",
    srcs = _PYSPARK_TEST_FILES,
    data = [
        "//spark:spark-assembly-jar",
    ] + glob(["test/sample/**/*"]),
    env = {
        "CHRONON_SPARK_JAR": "$(rootpath //spark:spark-assembly-jar)",
    },
    imports = [
        ".",
        "test/sample",
        "chronon/api/thrift",
    ],
    tags = ["manual"],  # Not included in //... — run explicitly
    deps = [
        "//api/py:api_py",
        "//api/thrift:api-models-py",
        requirement("thrift"),
        requirement("pyspark"),
        requirement("py4j"),
        requirement("typing-extensions"),
    ],
)
