load("@io_bazel_rules_scala//scala:scala_cross_version_select.bzl", "select_for_scala_version")

scala_library(
    name = "aggregator",
    srcs = glob(
        ["**/*.scala"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//ai/chronon/api:api-lib",
        "//ai/chronon/api:api-models",
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("com.yahoo.datasketches:sketches-core"),
        maven_artifact("com.yahoo.datasketches:memory"),
        maven_artifact("org.apache.commons:commons-lang3"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
    ] + select_for_scala_version(
        before_2_13 = [
            scala_artifact("org.scala-lang.modules:scala-collection-compat"),
            scala_artifact("com.fasterxml.jackson.module:jackson-module-scala"),
        ],
        since_2_13 = [
            scala_artifact("org.scala-lang.modules:scala-parallel-collections"),
        ],
    ),
)
